--- a/kodutoo1/src/App.css
+++ b/kodutoo1/src/App.css
@@ -7,13 +7,27 @@
 .Tere {color: blue;}
 .Tere:hover {font-size: 24px;}
 .Tere {font-style: italic;}
-.hommikust {color: green;}
+.hommikust {color: rgb(17, 180, 17);}
 .hommikust {font-weight: bold;}
 .hommikust {border-style: dashed;width: max-content;}
 .hommikust {border-color: red;}
 .hommikust:hover {border-color: brown;}
-.pilt {width: 250px;}
-.pilt {height: 300px;}
+.pilt {width: 250px; height:300px;}
 .pilt {position: absolute; top: 0px;right: 0px;}
 .pilt:hover {border-radius: 75px;}
 .pilt:hover {opacity: 0.3;}
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
