--- a/veebipood/src/App.css
+++ b/veebipood/src/App.css
@@ -7,13 +7,13 @@
 }
 
 .pilt:hover {
-  width: 120px;
   cursor: pointer;
+  transform: scale(1.1);
+  opacity: 70%;
 }
 
 .pilt:active {
-  width: 110px;
-  transform: rotate(1.1deg);
+  transform: rotate(5deg);
 }
 
 .nupp{
@@ -21,19 +21,43 @@
 }
 
 .nupp:hover {
-  width: 120px;
+  /* width: 120px; */
+  background-color: brown;
   cursor: pointer;
 }
 
 .nupp:active {
-  width: 110px;
+  /* width: 110px; */
   transform: rotate(1.1deg);
 }
 
-span{
+/* span{
   border: 1px solid red;
+} */
+
+.tekst{
+  border: 3px double green;
 }
 
-.Hübriid {
-  border: 3px double green;
+.navlink:hover img {
+  filter: invert(32%) sepia(88%) saturate(7145%) hue-rotate(311deg) brightness(87%) contrast(109%);
+}
+
+.nav {
+  background-color: #5f5f5f;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.navlink {
+  text-decoration: none;
+}
+
+.navlink span {
+color: white;
+}
+
+.navlink:hover span{
+  color:pink;
 }
