--- a/portfoolio/src/App.css
+++ b/portfoolio/src/App.css
@@ -8,3 +8,52 @@
   background-color: rgb(219, 98, 42);
   margin: 50px auto;
 }
+.navigation-picture {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 20px;
+}
+
+.navigation-picture img {
+  height: 150px;
+  width: 250px;
+  cursor: pointer;
+}
+
+.navigation-picture img:hover {
+  scale: 1.1;
+  transition: 0,5s;
+  box-shadow: 0 8px 100px 0px;
+  border-radius: 8px;
+  padding: 20px;
+
+}
+
+.main-link {
+  color: rgb(66,18, 18);
+  background-color: white;
+  width: 2000px;
+  height: 100px;
+  margin: 20px 0;
+  border-radius: 8px;
+  text-align: center;
+  text-decoration: none;
+  font-family: 'Roboto';
+}
+
+.facebook-button img {
+  height: 30px;
+  padding: 20px 10px;
+}
+
+.facebook-button span {
+  position: relative;
+  top: 5px;
+  height: 50px;
+  color: rgb(156, 19, 26);
+}
+
+.facebook-button:hover {
+  color: #7ba9c3;
+  cursor: pointer;
+}
