--- a/portfoolio/src/App.css
+++ b/portfoolio/src/App.css
@@ -30,7 +30,7 @@
 }
 
 .main-link {
-  color: rgb(66,18, 18);
+  color: rgb(175, 158, 80);
   background-color: white;
   width: 2000px;
   height: 100px;
