--- a/portfoolio/src/App.css
+++ b/portfoolio/src/App.css
@@ -57,3 +57,25 @@
   color: #7ba9c3;
   cursor: pointer;
 }
+
+.kursus, .tagasi {
+  background-color: white;
+  font-size: 18px;
+  font-weight: 50;
+  color: black;
+  border: 1px solid black;
+  margin: 1px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.kursus-aktiivne {
+  background-color: rgb(175, 158, 80);
+  font-size: 18px;
+  font-weight: 50;
+  color: black;
+  border: 1px solid black;
+  margin: 1px;
+  border-radius: 3px;
+  cursor: pointer;
+}
