--- a/blog/src/pages/settings/settings.css
+++ b/blog/src/pages/settings/settings.css
@@ -37,7 +37,7 @@
     margin-bottom: 10px;
   }
   
-  .settingsPP > img {
+  .settingsPPImg {
     height: 70px;
     width: 70px;
     border-radius: 20px;
