--- a/webshop/src/App.css
+++ b/webshop/src/App.css
@@ -2,6 +2,21 @@
   text-align: center;
 }
 
+.lang {
+  width: 40px;
+  height: 30px;
+  margin: 5px;
+}
+
+.lang:hover {
+cursor: pointer;
+opacity: 70%;
+}
+
+.lang:active {
+  padding: 1px;
+}
+
 .map {
   height: 300px;
 }
